# icm42688

./: Cargo.toml  LICENSE-MIT
src/: driver.rs  lib.rs  registers.rs
