[package]
name = "icm42688"
version = "0.1.1"
edition = "2021"
description = "Rust driver for the ICM42688 IMU sensor using SPI"
authors = ["Jan Ledvina <honzaled@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/honzaled/icm42688"

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"
serde = { version = "1.0", default-features = false, optional = true }

[features]
default = []
serde = ["dep:serde"]
